# adi

./: CMakeLists.txt  LICENSE  README.md  example.c
adi/: adi.c  adi.h
memory/: memory.c  memory.h
port/: port.h
processor/: processor.c  processor.h
